# SVO2.0

./: .gitignore  README.md
ceres_catkin/: CMakeLists.txt
dbow2_catkin/: CMakeLists.txt  README.md  package.xml
dbow2_catkin/cmake/: dbow2-extras.cmake.in
rpg_svo_pro_open/: evaluate.sh  transform_to_imu.py
rpg_svo_pro_open/svo/src/: frame_handler_array.cpp  frame_handler_base.cpp  frame_handler_mono.cpp  frame_handler_stereo.cpp  imu_handler.cpp  initialization.cpp  map.cpp  pose_optimizer.cpp  reprojector.cpp
rpg_svo_pro_open/svo_ceres_backend/src/: ceres_backend_interface.cpp  estimator.cpp  motion_detector.cpp
rpg_svo_pro_open/svo_common/src/: frame.cpp  point.cpp
rpg_svo_pro_open/svo_direct/src/: depth_filter.cpp  feature_alignment.cpp  matcher.cpp
rpg_svo_pro_open/svo_img_align/src/: sparse_img_align.cpp
rpg_svo_pro_open/svo_online_loopclosing/src/: loop_closing.cpp  map_alignment.cpp
rpg_svo_pro_open/svo_pgo/src/: pgo.cpp
rpg_svo_pro_open/svo_ros/: rviz_config_mono_2.rviz  rviz_config_mono_m2dgr_mono.rviz  rviz_config_mono_m2dgr_multicam.rviz  rviz_config_mono_newer_college_multicam.rviz
rpg_svo_pro_open/svo_ros/launch/: euroc_vio_mono.launch  euroc_vio_multicam.launch  m2dgr_vio_mono.launch  m2dgr_vio_multicam.launch  newer_college_vio_multicam.launch
rpg_svo_pro_open/svo_ros/param/: vio_mono.yaml
rpg_svo_pro_open/svo_ros/src/: ceres_backend_factory.cpp  svo_factory.cpp  svo_interface.cpp  svo_node.cpp  svo_node_base.cpp  visualizer.cpp
rpg_svo_pro_open/svo_tracker/src/: feature_tracker.cpp  feature_tracking_types.cpp  (+1 more)
(+30 files in other folders)
