<?xml version="1.0"?>
<package>
  <name>dbow2_catkin</name>
  <version>0.0.0</version> 
  <description>dbow2_catkin</description>
  <maintainer email="dev@titus-c.ch">tcies</maintainer>

  <license>Closed</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>
  
  <build_depend>cmake_external_project_catkin</build_depend>
</package>
